# student-manage-system

./: CMakeLists.txt  README.md  interface_Base.h  interface_Class.h  interface_Grade.h  interface_Speciality.h  interface_Student.h  interface_set.h  main.cpp  school.h  student.cpp  student.h
